<resources>
    <string name="app_name">Wheres My Puzzle</string>
    <string name="action_settings">Settings</string>

    <string name="hint">Hint:</string>
    <string name="hint_details">Hint Details</string>
    <string name="finish_message_prompt">Finish Message:</string>
    <string name="finish_message_hint">Finish Message</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="title">Title:</string>
    <string name="title_hint">Title</string>
    <string name="description">Description:</string>
    <string name="description_hint">Description</string>
    <string name="add_hint">Add Hint</string>
    <string name="finish_message">Finish Message:</string>
    <string name="finish">Finish</string>
    <string name="my_hunts">My Hunts</string>
    <string name="create_a_hunt">Create a Hunt</string>
    <string name="hints">Hints</string>
    <string name="current_hunts">Current Hunts</string>
    <string name="join_new_hunt">Join new hunt</string>
    <string name="back">Back</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_with_google">Sign in with Google</string>
    <string name="invalid_email">This email address is invalid</string>
    <string name="invalid_password">Password is too short</string>
    <string name="incorrect_password">Password is incorrect</string>
    <string name="field_required">This field is required</string>
    <string name="login_error">Login Error!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_account">Create Account</string>
    <string name="confirm">Confirm</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="username">Username</string>
    <string name="password_do_not_match">Passwords do not match</string>
    <string name="logout">Logout</string>
    <string name="join_new_hunt_title">Join New Hunt</string>
    <string name="prev">Prev</string>
    <string name="next">Next</string>
    <string name="minOneHintMessage">You must add at least one hint</string>
    <string name="join">Join</string>
    <string name="creator">Creator:</string>


</resources>
