<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="700dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="edu.rosehulman.podczemd.wheres_my_puzzle.Fragments.CurrentHuntsFragment">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/current_hunts"
            android:textSize="32sp" />


        <android.support.v7.widget.RecyclerView
            android:id="@+id/currentHuntsRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView7"
            android:layout_marginTop="25dp" />

        <Button
            android:id="@+id/myHuntsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/currentHuntsRecyclerView"
            android:layout_marginLeft="110p"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/my_hunts" />

        <Button
            android:id="@+id/joinHuntButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/myHuntsButton"
            android:layout_alignBottom="@+id/myHuntsButton"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/join_new_hunt" />
    </RelativeLayout>
</ScrollView>
